[package]
name = "webnis-bind"
version = "0.1.0"
authors = ["mikevs <mikevs@xs4all.net>"]
edition = "2018"

[dependencies]
futures = "0.1"
tokio = "0.1"
tokio-uds = "0.2"
tokio-codec = "0.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
hyper = "0.12"
hyper-tls = "0.3"
url = "1.7"
clap = "2.29.4"
log = "0.3"
env_logger = "0.4"
toml = "0.4.6"
bytes = "0.4.9"
libc = "0.2"
tk-listen = "0.2.0"
base64 = "0.9.2"
