[package]
name = "webnis-bind"
version = "0.1.0"
authors = ["mikevs <mikevs@xs4all.net>"]
edition = "2018"

[dependencies]
futures = "0.1.25"
tokio = "0.1.15"
tokio-uds = "0.2.5"
tokio-codec = "0.1.1"
serde = "1.0.85"
serde_derive = "1.0.85"
serde_json = "1.0.38"
hyper = "0.12.23"
hyper-tls = "0.3.1"
url = "1.7.2"
clap = "2.32.0"
log = "0.4.6"
env_logger = "0.6.0"
toml = "0.4.10"
bytes = "0.4.11"
libc = "0.2.48"
tk-listen = "0.2.1"
base64 = "0.10.1"
