[package]
name = "webnis-pam"
version = "0.1.0"
authors = ["mikevs <mikevs@xs4all.net>"]

[dependencies]
lazy_static = "1.0.2"
log = "0.4.3"
env_logger = "0.5.11"
percent-encoding = "1.0.1"
pamsm = { git = "https://github.com/miquels/pam_sm_rust", branch = "miquels" }
#pamsm = "0.1.0"

[lib]
name = "pam_webnis"
crate-type = [ "cdylib" ]

