[package]
name = "webnis-server"
version = "0.5.1"
authors = ["mikevs <mikevs@xs4all.net>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = { version = "0.7.19", features = [ "alpn" ] }
base64 = "0.10.1"
clap = "2.33.0"
env_logger = "0.6.1"
failure = "0.1.5"
failure_derive = "0.1.5"
futures = "0.1.26"
gdbm = "0.1.1"
http = "0.1.17"
ipnet = "2.0.0"
lazy_static = "1.3.0"
libc = "0.2.51"
log = "0.4.6"
net2 = "0.2.33"
openssl = "0.10.20"
percent-encoding = "1.0.1"
pwhash = "0.3.0"
rlua = "0.16.2"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
toml = "0.5.0"
regex = "1.1.6"
rand = "0.6.5"
fs2 = "0.4.3"
tokio = "0.1.20"
