[package]
name = "webnis-server"
version = "0.5.2"
authors = ["mikevs <mikevs@xs4all.net>"]
edition = "2018"

[dependencies]
base64 = "0.13"
bytes = "0.5"
crossfire = "0.1"
env_logger = "0.8"
failure = "0.1"
failure_derive = "0.1"
fs2 = "0.4"
futures = "0.3"
gdbm = { version = "0.1.2", git = "https://github.com/miquels/gdbm" }
http = "0.2"
hyper = "0.13"
ipnet = "2.3"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
percent-encoding = "1.0"
pwhash = "1.0"
rand = "0.8"
regex = "1.1"
rlua = "0.17"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2", features = [ "full" ] }
toml = "0.5"
warp = { version = "0.2", features = [ "tls" ] }
