[package]
name = "webnis-server"
version = "0.6.0"
authors = ["mikevs <mikevs@xs4all.net>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
bytes = "1.0.1"
crossfire = "0.1.4"
env_logger = "0.8.2"
failure = "0.1.8"
failure_derive = "0.1.8"
fs2 = "0.4.3"
futures = "0.3.12"
gdbm = { version = "0.2.0", git = "https://github.com/miquels/gdbm" }
http = "0.2.3"
hyper = "0.14.2"
ipnet = "2.3.0"
lazy_static = "1.4.0"
libc = "0.2.82"
log = "0.4.13"
percent-encoding = "1"
pwhash = "1.0.0"
rand = "0.8.2"
regex = "1.4.3"
rlua = "0.17.0"
serde = { version = "1.0.120", features = [ "derive" ] }
serde_json = "1.0.61"
structopt = "0.3.21"
tokio = { version = "1.0.2", features = [ "full" ] }
tokio-stream = "0.1.2"
toml = "0.5.8"
warp = { version = "0.3.0", features = [ "tls" ] }
